# rce-minecraft-server-unofficial

./: .env.template  .gitignore  Makefile  compose.yaml  playit.Containerfile  playit_healthcheck.py
mng-api/: .dockerignore  Containerfile  pyproject.toml
mng-api/mng_api/: app.py  mc.py
pinger/: Containerfile  pinger.py
