[tool.poetry]
name = "mng-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mcstatus = "^11.1.1"
rcon = "^2.4.6"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mcipc = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check mng_api"
fmt = "black mng_api"
fix = ["fmt", "lint"]
start = "uvicorn mng_api.app:app --reload"
